# Parsing-libs-speedtest

./: README.md  pyproject.toml  run.sh  test.html  test1.py  test2.py  test3.py
